# Tree_Planting_Analysis

./: .codexignore  .env  .gitignore  AGENTS.md  License  README.md  activate.bat  docker.yaml  project.tar  pyproject.toml  repomix.config.json  requirements.txt  requirements_dev.txt  scrap.md  stp_repo.md  street_sign_top100.csv  todo.md  zip.py
Data/gpkg/: gpkg.md
Data/table/: table.md
arcpy/: quick.py
config/: config.yaml  config_example.yaml  constants.yml  data_sources.json  settings.yaml  sources.json  user.example.yaml  worfklow.yaml
docs/: notes.md  scrap.md  todo.md
env/: environment.yml  environment_readme  requirements.txt
project/: .codexignore  AGENTS.md  hello.txt
project/config/: config_example.yaml  constants.yaml  data_sources_testing.json
project/scripts/: download_data.py
scripts/: 0_run_all.bat  1_download_data.py  2_fields_inventory.py  2_political_boundary.py  3_political_boundary.py  _scripts.md  download_data.py  download_helpers.py  storage_helpers.py  test.py
scripts/Need to review/: curb.py  move_points.py  nostanding.py  rank_dominant_working.py
scripts/helpers/: _helpers.md  config.py  data_cleaning.py  data_cleaning_helpers.py  download.py  download_helpers.py  fields_inventory.py  storage_helpers.py  table.py
scripts/review/: First Step.py  Second_Step_Alternative.py  _review.md  nostanding.py  rank_dominant_working.py
scripts/reviewed/: _reviewed.md  curb.py
scripts/stasis/: 0_initialize.bat  _stasis.md
src/stp/: config.py  config_loader.py  data_cleaning.py  db_storage.py  download.py  fields_inventory.py  file_storage.py  http_client.py  scaffold.md  settings.py  storage.py  stp.md  table.py
src/temp/: download_data.py  political_boundary.py
test/: test.py
tests/: test_address.py  test_config_loader.py  test_csv.py  test_db_storage.py  test_download.py  test_file_storage.py  test_geojson.py  test_http_client.py  test_trees.py
(+42 files in other folders)
