[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stp"
version = "0.1.0"
description = "Street Tree Planting Analysis tools"
authors = [ { name="Your Name", email="you@example.com" } ]
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["src"]
include = ["stp*"]
