[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stp"
version = "0.1.0"
description = "Street Tree Planting Analysis tools"
authors = [ { name="Shawn Ganz", email="ganz.shawn@gmail.com" } ]
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "geopandas>=0.14.0",
    "pandas>=2.0",
    "shapely>=2.0",
    "sqlalchemy>=2.0",
    "requests>=2.0",
    "pyproj",
    "psycopg2-binary",
]

[project.scripts]  # CLI entry points!
stp-download = "stp.download:main"  # Add a main() function to download.py if needed
stp-clean = "stp.data_cleaning:main"  # Same for others
stp-inventory = "stp.fields_inventory:main"